# opensource_example

./: .gitignore  README.md
brpc/proto/: testServer.proto
build_bazel/: WORKSPACE  conqueue.BUILD
build_bazel/main/: BUILD  CPPLINT.cfg  hello-world.cc
build_cmake/: CMakeLists.txt  main.cc
build_cmake/import_external_project/: CMakeLists.txt  main.cc  test
build_cmake/import_external_project/cmake/: concurrentqueue.cmake
k8s/: argo-base-template.yaml  coinflip.yaml  coinflip.yaml.bk  coinflip.yaml.new  coinflip_test.yaml  cowsay.yaml  data_parse.yaml  test.py
protobuf/: main.cc
protobuf/example/: main.cc
protobuf/example/proto/: meta.proto
protobuf/message/: main.cc
protobuf/message/proto/params/: param.proto
protobuf/parse_record/: main.py
protobuf/parse_record/proto/: desc.proto  desc_pb2.py  record.proto  record_pb2.py
protobuf/python/: CMakeLists.txt  main.py
protobuf/python/proto/common/: common.proto  common_pb2.py
protobuf/python/proto/desc/: desc_pb2.py
protobuf/python/proto/params/: param_pb2.py
protobuf/register_file_desc/: main.cc
protobuf/register_file_desc/proto/common/: common.proto
protobuf/register_file_desc/proto/desc/: desc.proto
protobuf/write_file_desc/: CMakeLists.txt  descriptor.binary  main.cc  proto.binary  proto_type.binary
protobuf_example/: CMakeLists.txt  main.cc
